# hw4

./: README.md  ejercicio0.ipynb  exercise6.ipynb  hw4.py  hw4_solutions.py  library_structure.txt  pyproject.toml  steps_creation_library.txt  structure.txt  test.py
process_data/: main.py  pyproject.toml
process_data/process_data/: pyproject.toml  setup.py
process_data/process_data/src/process_data/: __init__.py  data_binary.py  data_encoding.py  data_fill_nans.py  data_loader.py  data_predict.py  data_remove_nans.py  data_split.py  data_train_models.py  pred_auc_score.py
